--- a/layouts/partials/header.includes.html
+++ b/layouts/partials/header.includes.html
@@ -3,4 +3,5 @@
     <link href="/css/theme.css" rel="stylesheet">
 
     <link  href="/css/font-awesome.css" rel="stylesheet">
+    <link href="/css/common.css" rel="stylesheet">
     <link href="/css/custom.css" rel="stylesheet">
