fixing footer eapi links

--- a/layouts/partials/footer.copyright.html
+++ b/layouts/partials/footer.copyright.html
@@ -11,7 +11,6 @@
                     <li><a href="/blog">Blog</a></li>
                     <li><a href="https://gitter.im/Sabayon">Gitter</a></li>
                     <li class="first leaf"><a href="https://github.com/Sabayon/" title="Sabayon Github.">Github</a></li>
-                    <li class="leaf"><a href="http://eapi.sabayon.org" title="Entropy API documentation.">Entropy API Docs</a></li>
                     <li class="last leaf"><a href="https://github.com/Sabayon/sabayon-distro" title="Gitweb for overlay.git">Portage Overlay</a></li>
                 </ul>
               </div>
@@ -48,7 +47,7 @@
                     <li class="leaf"><a href="http://wiki.sabayon.org/index.php?title=Entropy#Fresh_Install_-_What_to_do.3F" title="First update and not sure what do do? Look here.">Fresh Install Guide</a></li>
                     <li class="leaf"><a href="http://wiki.sabayon.org/index.php?title=HOWTOs" title="These, surprisingly, show you how to do stuff.">How To Guides</a></li>
                     <li class="leaf"><a href="https://wiki.sabayon.org/index.php?title=Entropy#About_Entropy" title="About Entropy">About Entropy</a></li>
-                    <li class="leaf"><a href="https://eapi.sabayon.org/" title="Entropy API">Entropy API</a></li>
+                    <li class="leaf"><a href="http://eapi.sabayon.org/" title="Entropy API">Entropy API Docs</a></li>
                 </ul>
                 </div>
             </div>
