--- a/layouts/partials/header.includes.html
+++ b/layouts/partials/header.includes.html
@@ -1,7 +1,4 @@
-
-    <link href="/css/bootstrap.css" rel="stylesheet">
-    <link href="/css/theme.css" rel="stylesheet">
-
-    <link  href="/css/font-awesome.css" rel="stylesheet">
-    <link href="/css/common.css" rel="stylesheet">
-    <link href="/css/custom.css" rel="stylesheet">
+<link rel="stylesheet" href="/css/bootstrap.css" />
+<link rel="stylesheet" href="/css/theme.css" />
+<link rel="stylesheet" href="/css/font-awesome.css" />
+<link rel="stylesheet" href="/css/common.css" />
