--- a/layouts/partials/footer.copyright.html
+++ b/layouts/partials/footer.copyright.html
@@ -32,7 +32,7 @@
                     <li><i class="fa fa-wrench"></i> Services<li>
                     <li class="leaf"><a href="/donate">Donate</a>&nbsp; - &nbsp;<a href="mailto:webmaster@sabayonlinux.org">Contact Us</a></li>
                     <li class="leaf"><a href="https://pastebin.sabayon.org/">Pastebin</a>&nbsp; - &nbsp;<a href="https://lists.sabayon.org/">Lists</a></li>
-                    <li class="leaf"><a href="/post/">Blog Archive</a>&nbsp; - &nbsp;<a href="/releases/">Releases Archive</a></li>
+                    <li class="leaf"><a href="/article/">Blog Archive</a>&nbsp; - &nbsp;<a href="/releases/">Releases Archive</a></li>
                     <li class="leaf"><a href="https://wiki.sabayon.org/">Wiki</a>&nbsp; - &nbsp;<a href="/mirrors">Mirrors</a></li>
                     <li class="leaf"><a href="https://bugs.sabayon.org/">Bugs</a>&nbsp; - &nbsp;<a href="/press">Press Documentation</a></li>
                 </ul>
