--- a/layouts/404.html
+++ b/layouts/404.html
@@ -5,7 +5,9 @@
 <div class="container">
     <div class="row">
   <div>
-   <h1 id="title">{{ .Title }} .... ooops, something bad happened here</h1>
+   <h1 id="title">{{ .Title }} .... Whoops! something bad happened here</h1>
+    <img src="http://files.sharenator.com/121256xcitefun_error_404_1-s600x398-220298.jpg" class="img-responsive">
+    <p>I couldn't find what you were looking for! The admins was notified, don't worry!</p>
   </div>
     </div>
 {{ partial "footer.copyright.html" . }}
