--- a/layouts/404.html
+++ b/layouts/404.html
@@ -6,7 +6,7 @@
     <div class="row">
   <div>
    <h1 id="title">{{ .Title }} .... Whoops! something bad happened here</h1>
-    <img src="http://files.sharenator.com/121256xcitefun_error_404_1-s600x398-220298.jpg" class="img-responsive">
+    <center><img src="http://files.sharenator.com/121256xcitefun_error_404_1-s600x398-220298.jpg" class="img-responsive"></center>
     <p>I couldn't find what you were looking for! The admins was notified, don't worry!</p>
   </div>
     </div>
