--- a/layouts/partials/header.includes.html
+++ b/layouts/partials/header.includes.html
@@ -1,7 +1,6 @@
-
-    <link href="/css/bootstrap.css" rel="stylesheet">
-    <link href="/css/theme.css" rel="stylesheet">
-
-    <link  href="/css/font-awesome.css" rel="stylesheet">
-    <link href="/css/common.css" rel="stylesheet">
-    <link href="/css/custom.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quattrocento+Sans:400,400italic,700,700italic" />
+<link rel="stylesheet" type="text/css" href="/css/bootstrap.css" />
+<link rel="stylesheet" type="text/css" href="/css/theme.css" />
+<link rel="stylesheet" type="text/css" href="/css/font-awesome.css" />
+<link rel="stylesheet" type="text/css" href="/css/common.css" />
+<link rel="stylesheet" type="text/css" href="/css/custom.css" />
