fix footer.includes rename

--- a/layouts/indexes/category.html
+++ b/layouts/indexes/category.html
@@ -21,4 +21,4 @@
     </div>
 {{ partial "footer.copyright.html" . }}
 </div>
-{{ partial "footer.html" . }}
+{{ partial "footer.includes.html" . }}
