--- a/layouts/404.html
+++ b/layouts/404.html
@@ -12,4 +12,4 @@
     </div>
 {{ partial "footer.copyright.html" . }}
 </div>
-{{ partial "footer.html" . }}
+{{ partial "footer.includes.html" . }}
