--- a/layouts/indexes/tag.html
+++ b/layouts/indexes/tag.html
@@ -21,4 +21,4 @@
     </div>
 {{ partial "footer.copyright.html" . }}
 </div>
-{{ partial "footer.html" . }}
+{{ partial "footer.includes.html" . }}
