--- a/layouts/partials/footer.includes.html
+++ b/layouts/partials/footer.includes.html
@@ -3,6 +3,6 @@
     <script src="/js/bootstrap.js"></script>
     <script src="/js/common.js"></script>
     <script src="/js/script.js"></script>
-
+    <script type="text/javascript" src="/js/headroom.min.js"></script>
 </body>
 </html>
