--- a/layouts/indexes/category.html
+++ b/layouts/indexes/category.html
@@ -1,4 +1,17 @@
-{{ partial "header.html" . }}
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <title>{{ .Title }} - {{ .Site.BaseURL }}</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="{{ .Description }}" />
+        <meta name="author" content="Sabayonlinux crew" />
+        <link rel="canonical" href="{{ .Permalink }}">
+        <link rel="shortcut icon" href="https://www.sabayon.org/sites/all/themes/sabayon/favicon.ico" type="image/vnd.microsoft.icon" />
+        {{ if .RSSlink }}<link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />{{ end }}
+        {{ partial "header.includes.html" . }}
+    </head>
 <body>
 {{ partial "navbar.html" . }}
 <div class="container">
@@ -16,9 +29,12 @@
 
         <!-- Sidebar -->
         <div class="col-md-3">
-        {{ partial "menu.html" . }}
+	        {{ partial "menu.html" . }}
         </div>
+        {{ partial "footer.copyright.html" . }}
     </div>
-{{ partial "footer.copyright.html" . }}
-</div>
-{{ partial "footer.includes.html" . }}
+        {{ partial "footer.includes.html" . }}
+    </body>
+</html>
+
+
