layouts: removing blog archive from footer for now

--- a/layouts/partials/footer.copyright.html
+++ b/layouts/partials/footer.copyright.html
@@ -80,9 +80,7 @@
                                 </a>
                             </li><!-- .leaf -->
                             <li class="leaf">
-                                <a href="/article/">
-                                    Blog Archive
-                                </a>&nbsp; - &nbsp;
+                                &nbsp;
                                 <a href="/releases/">Releases Archive</a>
                             </li><!-- .leaf -->
                             <li class="leaf">
