--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -11,6 +11,29 @@
         <link rel="shortcut icon" href="https://www.sabayon.org/sites/all/themes/sabayon/favicon.ico" type="image/vnd.microsoft.icon" />
         {{ if .RSSlink }}<link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />{{ end }}
         {{ partial "header.includes.html" . }}
+        <style type="text/css">
+            #active-forum-posts {
+                margin-left: auto;
+                margin-right: auto;
+                max-width: 90%;
+                padding: 0;
+            }
+
+            #active-forum-posts ul {
+                list-style: none;
+                padding: 0;
+            }
+
+            #active-forum-posts li {
+                border-bottom: 1px solid #ccc;
+                padding-bottom: 1%;
+                padding-top: 1%;
+            }
+
+            #active-forum-posts a {
+                display: inline-block;
+            }
+        </style>
     </head>
     <body>
         {{ partial "navbar.html" . }}
