--- a/static/css/common.css
+++ b/static/css/common.css
@@ -1,18 +1,19 @@
 body {
-    margin-top: 110px;
     background: #000;
-    color:#fff;
-font-family: 'Quattrocento Sans', sans-serif;}
+    color: #fff;
+    font-family: 'Quattrocento Sans', sans-serif;
+}
 
 footer {
     margin: 50px 0;
 }
 
-#getit{
-  background:#000;
-  color:#fff;
+#getit {
+    background: #000;
+    color: #fff;
 }
-.navbar-nav li{
+
+.navbar-nav li {
     margin-top: 10px;
 }
 
@@ -21,83 +22,72 @@ div.mirrors-list img.flag {
     margin-top: 1.3em;
 }
 
-.mirror_link{
+.mirror_link {
     word-wrap: break-word;
 }
 
 .btn-primary {
-  background: #000;
+    background: #000;
 }
-.jumbotron{
+
+.jumbotron {
     background: url(../img/intro-bg.jpg);
     color: #fff;
     background-attachment: fixed;
-    margin-bottom:0px;
-
+    margin-bottom: 0px;
 }
 
-.community{
-  background: url(../img/community.jpg);
-  background-attachment: fixed;
-  color: #fff;
-
-
+.community {
+    background: url(../img/community.jpg);
+    background-attachment: fixed;
+    color: #fff;
 }
 
-
-.documentation{
-  background: url(../img/documentation.jpg);
-  background-attachment: fixed;
-  color: #fff;
-
-
+.documentation {
+    background: url(../img/documentation.jpg);
+    background-attachment: fixed;
+    color: #fff;
 }
 
-
-.navbar a{
-  color:#000;
+.navbar a {
+    color: #000;
 }
 
-
-.jumbotron p{
-  /*  padding: 20px 0; */
-}
-
-.jumbotron .media{
+.jumbotron .media {
     margin: 50px 0;
-    margin-bottom:0px;
+    margin-bottom: 0px;
 }
 
-.jumbotron .media-body h1{
+.jumbotron .media-body h1 {
     margin-top: 40px;
 }
 
 .btn-circle {
-  width: 30px;
-  height: 30px;
-  text-align: center;
-  padding: 6px 0;
-  font-size: 12px;
-  line-height: 1.428571429;
-  border-radius: 15px;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    padding: 6px 0;
+    font-size: 12px;
+    line-height: 1.428571429;
+    border-radius: 15px;
 }
 
 .btn-circle.btn-lg {
-  width: 50px;
-  height: 50px;
-  padding: 10px 16px;
-  font-size: 18px;
-  line-height: 1.33;
-  border-radius: 25px;
+    width: 50px;
+    height: 50px;
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.33;
+    border-radius: 25px;
 }
 
 .btn-circle.btn-xl {
-  width: 110px;
-  height: 110px;
-  padding: 10px 16px;
-  font-size: 24px;
-  line-height: 1.33;
-  border-radius: 35px;
+    width: 110px;
+    height: 110px;
+    padding: 10px 16px;
+    font-size: 24px;
+    line-height: 1.33;
+    border-radius: 35px;
 }
 
 div.feature-box {
@@ -107,9 +97,9 @@ div.feature-box {
 div.feature-box div.feature-box-icon {
     -moz-border-radius: 35px;
     -webkit-border-radius: 35px;
-    background: #ffffff;
+    background: #fff;
     border-radius: 35px;
-    color: #52AD81;
+    color: #52ad81;
     display: inline-block;
     float: left;
     height: 35px;
@@ -138,107 +128,111 @@ div.feature-box div.feature-box-icon i.image-icon.small {
     padding-top: 30px;
 }
 
-.features p{
+.features p {
     margin: 30px 0;
 }
 
-.features .col-lg-4:first-child .icon-stack-base{
-    color:#52AD81;
+.features .col-lg-4:first-child .icon-stack-base {
+    color: #52ad81;
 }
 
-.features .col-lg-4:nth-child(2) .icon-stack-base{
-    color:#CD5A48;
+.features .col-lg-4:nth-child(2) .icon-stack-base {
+    color: #cd5a48;
 }
 
-.features .col-lg-4:last-child .icon-stack-base{
-    color:#51A9D6;
+.features .col-lg-4:last-child .icon-stack-base {
+    color: #51a9d6;
 }
-.navbar{
-  background: none;
+
+.navbar {
+    background: none;
 }
+
 .navbar .navbar-nav {
-  display: inline-block;
-  float: none;
-  vertical-align: top;
-
+    display: inline-block;
+    float: none;
+    vertical-align: top;
 }
 
 .navbar .navbar-collapse {
-  text-align: center;
+    text-align: center;
 }
 
 .screens {
-  background: rgba(222,217,200, .85);
-  padding: 30px;
-  color: #000000;
+    background: rgba(222,217,200, .85);
+    padding: 30px;
+    color: #000;
 }
 
 .services {
-  background: #fff;
-  padding: 30px;
-  color: #000000;
+    background: #fff;
+    padding: 30px;
+    color: #000;
 }
 
 .info {
-  background: #000;
-  color:#fff;
+    background: #000;
+    color: #fff;
 }
 
 .copyright {
-  background: #000;
-  font-size: small;
-  color: #EEEDEC;
+    background: #000;
+    font-size: small;
+    color: #eeedec;
 }
 
 .fun_facts{
-  background: #fff;
-  color:#000
+    background: #fff;
+    color: #000
 }
 
-.flavour-cloud{
-  background:#EBF2F2;
-  color:#ADE0DB;
+.flavour-cloud {
+    background: #ebf2f2;
+    color: #ade0db;
 }
-.flavour-server{
-  background:#C0D5C2;
-  color:#000;
+
+.flavour-server {
+    background: #c0d5c2;
+    color: #000;
 }
-.flavour-desktop{
-  background:#9BC1C5;
-  color:#000;
+
+.flavour-desktop {
+    background: #9bc1c5;
+    color: #000;
 }
-.flavour-testing{
-  background:#0CAB82;
-  color:#000;
+
+.flavour-testing {
+    background: #0cab82;
+    color: #000;
 }
+
 .fun_facts .section_overlay {
-/*background: rgba(44,62,80, .95); */
-  padding-bottom: 30px;
+    padding-bottom: 30px;
 }
-
 
 .footer_override {
-      color:#ffffff !important;
+    color: #fff !important;
 }
 
 .well {
-      background: #fff;
-      color:#000;
+    background: #fff;
+    color :#000;
 }
 
 .well-summary a{
-  color:#000;
+    color: #000;
 }
 
 .panel .panel-heading {
-      background: rgba(222,217,200, 1);
-      color:#000000;
-      border-color: rgba(187, 184, 180, 0.7);
+    background: rgba(222,217,200, 1);
+    color: #000;
+    border-color: rgba(187, 184, 180, 0.7);
 }
+
 .panel-default {
-      background: #fff;
-      color:#000;
-      border: solid rgba(187, 184, 180, 0.7);
+    background: #fff;
+    color: #000;
+    border: solid rgba(187, 184, 180, 0.7);
 }
 
 h3 a[href='http://dl.sabayon.org/iso/daily/daily.html']::before,
@@ -355,6 +349,7 @@ img[src="https://joostruis.files.wordpress.com/2015/09/plasma_sab.png?w=582&h=21
     top: 0;
     transform: translateY(0%);
     width: 100%;
+    z-index: 1000;
 }
 
 .headroom--unpinned {
