Don't show download icon on linked icons. relates to Sabayon/sabayon-website-next#49

--- a/layouts/custom/server.html
+++ b/layouts/custom/server.html
@@ -150,7 +150,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-9">
-                    <div class="well well-sm content">
+                    <div class="well well-sm content server">
                         <h3>{{ .Title }}<br> <small>{{ .Description }}</small></h3>
                         <hr>
                         {{ .Content }}
