--- a/layouts/custom/desktop.html
+++ b/layouts/custom/desktop.html
@@ -150,7 +150,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-9">
-                    <div class="well well-sm content">
+                    <div class="well well-sm content desktop">
                         <h3>{{ .Title }}<br> <small>{{ .Description }}</small></h3>
                         <hr>
                         {{ .Content }}
