--- a/layouts/partials/footer.includes.html
+++ b/layouts/partials/footer.includes.html
@@ -1,6 +1,2 @@
-
-    <script src="/js/jquery.js"></script>
-    <script src="/js/bootstrap.js"></script>
-    <script src="/js/common.js"></script>
-    <script src="/js/script.js"></script>
-    <script type="text/javascript" src="/js/headroom.min.js"></script>
+<script type="text/javascript" src="/js/headroom.min.js"></script>
+<script type="text/javascript" src="/js/common.js"></script>
