--- a/layouts/indexes/tag.html
+++ b/layouts/indexes/tag.html
@@ -13,7 +13,7 @@
         {{ partial "header.includes.html" . }}
     </head>
 <body>
-{{ partial "navbar.html" . }}
+{{ partial "mainnav.html" . }}
 <div class="container">
     <div class="row">
         <div class="col-md-9">
