--- a/layouts/indexes/post.html
+++ b/layouts/indexes/post.html
@@ -13,7 +13,7 @@
         {{ partial "header.includes.html" . }}
     </head>
 <body>
-{{ partial "navbar.html" . }}
+{{ partial "mainnav.html" . }}
 <div class="container">
     <div class="row">
         <div class="col-md-9">
@@ -25,11 +25,6 @@
                     {{ end}}
                 </ul>
             </div>
-        </div>
-
-        <!-- Sidebar -->
-        <div class="col-md-3">
-        {{ partial "menu.html" . }}
         </div>
     </div>
 {{ partial "footer.copyright.html" . }}
