Incorporate feedback from forums. (#25)

--- a/layouts/partials/footer.copyright.html
+++ b/layouts/partials/footer.copyright.html
@@ -1,7 +1,7 @@
 <section class="copyright">
     <div xmlns:dc="http://purl.org/dc/elements/1.1/">
         <span id="copyright" property="dc:rights">&copy;</span>
-        <span property="dc:date">2004-2018</span>
+        <span property="dc:date">2004-{{ now.Format "2006" }}</span>
         <span property="dc:publisher">Sabayon Promotion</span>
         (CF: 93018620224).
     </div>
