--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -12,7 +12,7 @@
         "footer";
 }
 
-@media (min-width: 21em) {
+@media (min-width: 30em) {
     .wrapper {
         grid-template-columns: 25% 25% 25% 25%;
         grid-template-areas:
@@ -38,12 +38,6 @@ footer {
     grid-area: footer;
 }
 
-article,
-section {
-    margin: 0.5em;
-    padding: 0.5em;
-}
-
 header nav {
     display: flex;
     flex-direction: column;
@@ -52,6 +46,7 @@ header nav {
 @media (min-width: 21em) {
     header nav {
         flex-direction: row;
+        flex-wrap: wrap;
     }
 }
 
@@ -73,12 +68,9 @@ header nav ul {
     padding-inline-start: 0;
 }
 
-header nav ul li {
-    padding: 0.25em 0.5em;
-}
-
 main img {
     display: block;
+    max-width: 100%;
     height: auto;
 }
 
@@ -106,23 +98,7 @@ main .pagenav-label {
 main ol.pagenav {
     display: inline-flex;
     flex-direction: row;
-
-    list-style: none;
-    margin-block-start: 0;
-    padding-inline-start: 0;
-}
-
-main ol.pagenav li::before {
-    display: inline;
-    content: ">";
-}
-
-main ol.pagenav li:first-of-type::before {
-    content: "";
-}
-
-main ol.pagenav li {
-    padding: 0 0.5em 0 0;
+    flex-wrap: wrap;
 }
 
 main .sponsors ul {
@@ -158,6 +134,7 @@ footer section {
 @media (min-width: 21em) {
     footer section {
         flex-direction: row;
+        flex-wrap: wrap;
     }
 
     footer .copyright {
@@ -166,11 +143,8 @@ footer section {
 }
 
 footer ul {
+    flex: 1;
     list-style: none;
     margin-block-start: 0;
     padding-inline-start: 0;
-}
-
-footer ul li {
-    padding: 0.25em 0.5em;
 }
