--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -1,31 +1,34 @@
 :root {
-    --primary-foreground-colour: #2626d9;
-    --secondary-foreground-colour: lightgray;
-    --background-colour: #111111;
-    --secondary-background-colour: #d3d3d3;
-    --text-colour: #d3d3d3;
-    --card-background-colour: #2b2e31;
-    --card-text-colour: #d3d3d3;
-    --card-border-colour: #6f6f6f;
+    --primary-foreground-colour: #9797f7;
+    --secondary-foreground-colour: #d3d3d3;
+    --primary-background-colour: #111111;
+    --secondary-background-colour: #9797f4;
+    --primary-text-colour: #d3d3d3;
+    --secondary-text-colour: #111111;
+
     --global-padding: 0.5em;
 }
 
 body {
-    background-color: var(--background-colour);
-    color: var(--text-colour);
+    background-color: var(--primary-background-colour, #111);
+    color: var(--primary-text-colour);
+    font-family: sans-serif;
+}
+
+header {
+    padding: 0 1em;
 }
 
 article,
 section {
-    background-color: var(--card-background-colour);
-    color: var(--card-text-colour);
-    border: 1px solid var(--card-border-colour);
+    margin: 0 0.5em 5em 0.5em;
 }
 
 h1,
 h2,
 h3 {
     font-family: sans-serif;
+    margin-block-start: 0;
 }
 
 h1 {
@@ -42,15 +45,60 @@ h3 {
 }
 
 p {
-    font-family: serif;
+    font-family: sans-serif;
+}
+
+li {
+    margin-block-end: 1em;
 }
 
 a {
-    color: var(--text-colour);
+    color: var(--primary-text-colour);
+    padding: 0.25em 0.5em;
 }
 
 sup {
     font-size: 50%;
+}
+
+header nav ul li {
+    padding: 0.25em 0.5em;
+    margin-block-end: 1em;
+}
+
+header nav a img {
+    padding: 1em 4em;
+}
+
+main nav {
+    margin: 2em 0.5em;
+}
+
+main ol.pagenav {
+    list-style: none;
+    padding-inline-start: 0;
+}
+
+main .pagenav-label {
+    margin-block-start: 0;
+}
+
+main ol.pagenav li:first-of-type::before {
+    content: "";
+}
+
+main ol.pagenav li::before {
+    display: inline;
+    content: ">";
+}
+
+main ol.pagenav li {
+    padding: 0 0.25em;
+}
+
+main ol.pagenav li a {
+    padding-inline-start: 0;
+    padding-inline-end: 0;
 }
 
 nav li a.active {
@@ -58,7 +106,22 @@ nav li a.active {
 }
 
 .hero-image img {
-    background-color: var(--secondary-background-colour);
+    background-color: var(--primary-background-colour);
     max-width: calc(100% + 2 * var(--global-padding));
-    margin-left: calc(-1 * var(--global-padding));
+    margin-inline-start: calc(-1 * var(--global-padding));
+}
+
+footer section:last-of-type {
+    margin-block-end: 0.5em;
+}
+
+footer ul li {
+    padding: 0.25em 0.5em;
+    margin-block-end: 0.5em;
+    line-height: 1.75;
+}
+
+footer ul li a {
+    padding-inline-start: 0;
+    padding-inline-end: 0;
 }
