Improve underline behaviour. Adjust link to donate page. (#31)

--- a/layouts/partials/footer.links.html
+++ b/layouts/partials/footer.links.html
@@ -42,7 +42,7 @@
     <ul>
         <li>Services</li>
         <li>
-            <a href="/press/donate/">Donate</a>&nbsp; - &nbsp;
+            <a href="/participate/donate/">Donate</a>&nbsp; - &nbsp;
             <a href="mailto:webmaster@sabayonlinux.org">
                 Contact Us
             </a>
